[package]
name = "kv-engine"
version = "0.1.0"
edition = "2021"
description = "A local key-value storage engine based on LSM-Tree"

[[bin]]
name = "kv-cli"
path = "src/bin/cli.rs"

[[bench]]
name = "engine_bench"
harness = false

[dependencies]
# Phase 1
crc32fast = "1"          # WAL CRC checksum

[dev-dependencies]
tempfile = "3"
proptest = "1"

[features]
default = []
