[package]
name = "kv-engine"
version = "0.1.0"
edition = "2021"
description = "A local key-value storage engine based on LSM-Tree"

[[bin]]
name = "kv-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "kv-server"
path = "src/bin/server.rs"

[[bench]]
name = "engine_bench"
harness = false

[dependencies]
crc32fast = "1"
tracing = "0.1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
proptest = "1"

[features]
default = []
